# mc

./: .codegen.cpp.swo  CMakeLists.txt  a.out  codegen.cpp  codegen.hpp  decl.hpp  expr.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantics.cpp  semantics.hpp  statement.hpp  symbol.hpp  test.mc  token.cpp  token.hpp  type.hpp
